--- a/app.css
+++ b/app.css
@@ -1,4 +1,3 @@
-
 /* Your styles should be mobile-first and responsive */
 
 /** 
@@ -11,95 +10,160 @@
   background-color:#454140;
   text-align: center;
   margin: 0px;
-  padding: 0px;
-  top: 0px;
-  margin: 0px;
   color:#a79e84;
-  /* border: red solid 1px; */
+  border: red solid 0px;
   font-family: "Lucida Console", Courier, monospace;
   box-sizing: border-box;
+  max-width: 480px;
+  max-height: 100%;
+  box-sizing: border-box;
 }
-body{
-  background-color:#454140 ;
-}
-header{
-  background-color: #454140;
-}
-.bottomBar{
-  height: 50px;
-}
-.score{
-  height: 20px;
-}
-.question{
-  height: 20px;
-}
-h1{
-  color:#a79e84;
-  margin-top: 0px;
-  background-color: #454140 ;
-  
-}
-h2{
-  color:#bd5734;
-  margin-top: 0px;
-  padding-top: 10px;
-  font-size: 18px;
-}
-h3{
-  margin-top: 20px;
-}
-p{
-  margin-top: 20px;
-}
-div{
-  height: 200px;
-}
-button{
-  margin-top: 35px;
-  background-color: #7a3b2e; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  align-self: baseline;
-}
-.nextQuestion{
-  margin-top: 10px
-}
-input{
-  margin-top: 10px;
-  background-color: #7a3b2e; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-.finalMessage{
-  margin-top: 30px;
-}
-
 .quiz {
-  border: 5px solid #bd5734;
-margin-top:33%;
-padding:5%;
-height: 400px;
-width:90%;
-margin-left:auto;
-margin-right:auto;
+  max-width: 480px;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 400px;
+  width:100%;
+  margin-left:auto;
+  margin-right:auto;
 }
-
-/* .radios{
-  display:flex;
-  flex-wrap: wrap;
-} */
-
-.boxes{
- height:100px;
+#displayH1,.currentQuestion{
+  margin-top: 0;
 }
+#displayH2{
+  margin-top:40%;
+  color:#bd5734;
+}
+.radios{
+  margin-top: 20%;
+  text-align: left;
+  color:#bd5734;
+}
+.score,.question,.answer{
+  margin-top:15px;
+}
+.correctAnswer{
+  margin-top: 50px;
+  color:#bd5734;
+}
+button,.submitAnswer,.startQuiz{
+  margin-top:150px;
+  background-color:#7a3b2e;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+ }
+ @media only screen 
+ and (min-device-width : 768px) and (max-device-width:1024px){
+  *{
+    background-color:#454140;
+    text-align: center;
+    margin: 0px;
+    color:#a79e84;
+    border: red solid 0px;
+    font-family: "Lucida Console", Courier, monospace;
+    box-sizing: border-box;
+    max-width: 1024px;
+    max-height: 1024px;
+    box-sizing: border-box;
+  }
+  .quiz {
+    max-width: 1024px;
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 100%;
+    width:100%;
+    margin-left:auto;
+    margin-right:auto;
+    font-size: xx-large;
+  }
+  #displayH1,.currentQuestion{
+    margin-top: 0;
+  }
+  #displayH2{
+    margin-top: 40%;
+    color: #bd5734;
+  }
+  .radios{
+    margin-top: 40%;
+    text-align: left;
+    color:#bd5734;
+  }
+  .score,.question,.answer{
+    margin-top:35px;
+  }
+  .correctAnswer{
+    margin-top: 50px;
+    color:#bd5734;
+  }
+  button,.submitAnswer,.startQuiz{
+    margin-top:150px;
+    background-color:#7a3b2e;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 32px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+   }
+}
+@media only screen 
+ and (min-device-width : 1025px){
+  *{
+    background-color:#454140;
+    text-align: center;
+    margin: 0px;
+    color:#a79e84;
+    border: red solid 0px;
+    font-family: "Lucida Console", Courier, monospace;
+    margin-left:auto;
+    margin-right:auto;
+  }
+  .quiz {
+    max-width: 50%;
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 100%;
+    width:100%;
+    margin-left:auto;
+    margin-right:auto;
+  }
+  #displayH1,.currentQuestion{
+    margin-top: 0;
+  }
+  #displayH2{
+    margin-top:40%;
+    color:#bd5734;
+  }
+  .radios{
+    margin-top: 10%;
+    text-align: left;
+    color:#bd5734;
+  }
+  .score,.question,.answer{
+    margin-top:15px;
+  }
+  .correctAnswer,.finalMessage{
+    margin-top: 10px;
+    color:#bd5734;
+  }
+  button,.submitAnswer,.startQuiz{
+    margin-top:50px;
+    background-color:#7a3b2e;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+   }
+ }
