--- a/app.css
+++ b/app.css
@@ -8,162 +8,188 @@
 */
 *{
   background-color:#454140;
-  text-align: center;
-  margin: 0px;
-  color:#a79e84;
-  border: red solid 0px;
   font-family: "Lucida Console", Courier, monospace;
-  box-sizing: border-box;
-  max-width: 480px;
-  max-height: 100%;
-  box-sizing: border-box;
+  text-align: center;
+  color: #a79e84;
+  margin-left: auto;
+  margin-right: auto;
 }
 .quiz {
-  max-width: 480px;
-  margin-top: auto;
-  margin-bottom: auto;
-  height: 400px;
-  width:100%;
-  margin-left:auto;
-  margin-right:auto;
+  max-width: 75%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
-#displayH1,.currentQuestion{
-  margin-top: 0;
+#startPageContainer{
+  width: 100%;
 }
-#displayH2{
-  margin-top:40%;
-  color:#bd5734;
-}
-.radios{
-  margin-top: 20%;
-  text-align: left;
-  color:#bd5734;
-}
-.score,.question,.answer{
-  margin-top:15px;
-}
-.correctAnswer{
-  margin-top: 50px;
-  color:#bd5734;
+h2{
+  margin-top: 25%;
+  margin-bottom: 10%;
 }
 button,.submitAnswer,.startQuiz{
-  margin-top:150px;
+  max-height: 33%;
   background-color:#7a3b2e;
-  border: none;
-  color: white;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
  }
- @media only screen 
- and (min-device-width : 768px) and (max-device-width:1024px){
-  *{
-    background-color:#454140;
-    text-align: center;
-    margin: 0px;
-    color:#a79e84;
-    border: red solid 0px;
-    font-family: "Lucida Console", Courier, monospace;
-    box-sizing: border-box;
-    max-width: 1024px;
-    max-height: 1024px;
-    box-sizing: border-box;
-  }
-  .quiz {
-    max-width: 1024px;
-    margin-top: auto;
-    margin-bottom: auto;
-    height: 100%;
-    width:100%;
-    margin-left:auto;
-    margin-right:auto;
-    font-size: xx-large;
-  }
-  #displayH1,.currentQuestion{
-    margin-top: 0;
-  }
-  #displayH2{
-    margin-top: 40%;
-    color: #bd5734;
-  }
-  .radios{
-    margin-top: 40%;
-    text-align: left;
-    color:#bd5734;
-  }
-  .score,.question,.answer{
-    margin-top:35px;
-  }
-  .correctAnswer{
-    margin-top: 50px;
-    color:#bd5734;
-  }
-  button,.submitAnswer,.startQuiz{
-    margin-top:150px;
-    background-color:#7a3b2e;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 32px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-   }
-}
-@media only screen 
- and (min-device-width : 1025px){
-  *{
-    background-color:#454140;
-    text-align: center;
-    margin: 0px;
-    color:#a79e84;
-    border: red solid 0px;
-    font-family: "Lucida Console", Courier, monospace;
-    margin-left:auto;
-    margin-right:auto;
-  }
-  .quiz {
-    max-width: 50%;
-    margin-top: auto;
-    margin-bottom: auto;
-    height: 100%;
-    width:100%;
-    margin-left:auto;
-    margin-right:auto;
-  }
-  #displayH1,.currentQuestion{
-    margin-top: 0;
-  }
-  #displayH2{
-    margin-top:40%;
-    color:#bd5734;
-  }
-  .radios{
-    margin-top: 10%;
-    text-align: left;
-    color:#bd5734;
-  }
-  .score,.question,.answer{
-    margin-top:15px;
-  }
-  .correctAnswer,.finalMessage{
-    margin-top: 10px;
-    color:#bd5734;
-  }
-  button,.submitAnswer,.startQuiz{
-    margin-top:50px;
-    background-color:#7a3b2e;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-   }
+ .submitAnswer{
+   max-width: 100%;
  }
+ #questionsForm{
+   max-height: 75%;
+   width: 100%;
+   height: 75%;
+ }
+ #currentQuestion{
+   text-align: left;
+   margin-top: 10%;
+   max-width: 80%;
+ }
+ #radios{
+   margin-top: 10%;
+   max-width: 80%;
+   margin-left: auto;
+   margin-right: auto;
+   text-align: left;
+ }
+ .answer{
+   margin: 10px
+ }
+ .bottomBar{
+   max-width: 100%;
+   max-height: 25%;
+ }
+ .question,.score{
+   max-width: 100%;
+ }
+ #endPage{
+   max-width: 100%;
+ }
+
+ @media (max-width: 1024) and (min-width:768px) {
+  *{
+  background-color:#454140;
+  font-family: "Lucida Console", Courier, monospace;
+  text-align: center;
+  color: #a79e84;
+  margin-left: auto;
+  margin-right: auto;
+}
+.quiz {
+  max-width: 100%;
+  height:1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+#startPageContainer{
+  width: 100%;
+}
+h2{
+  margin-top: 25%;
+  margin-bottom: 10%;
+}
+button,.submitAnswer,.startQuiz{
+  max-height: 33%;
+  background-color:#7a3b2e;
+  padding: 15px 32px;
+  text-align: center;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+ }
+ .submitAnswer{
+   max-width: 100%;
+ }
+ #questionsForm{
+   max-height: 75%;
+   width: 100%;
+   height: 75%;
+ }
+ #currentQuestion{
+   margin-top: 10%;
+   max-width: 100%;
+ }
+ #radios{
+   margin-top: 10%;
+   max-width: 100%;
+   margin-left: auto;
+   margin-right: auto;
+   text-align: left;
+ }
+ .answer{
+   margin: 10px;
+ }
+ .bottomBar{
+   max-width: 100%;
+   max-height: 25%;
+ }
+ .question,.score{
+   max-width: 100%;
+ }
+ #endPage{
+   max-width: 100%;
+ }
+}
+ @media (max-width: 767px) {
+  *{
+  background-color:#454140;
+  font-family: "Lucida Console", Courier, monospace;
+  text-align: center;
+  color: #a79e84;
+  margin-left: auto;
+  margin-right: auto;
+}
+.quiz {
+  max-width: 100%;
+  height:600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+#startPageContainer{
+  width: 100%;
+}
+h2{
+  margin-top: 25%;
+  margin-bottom: 10%;
+}
+button,.submitAnswer,.startQuiz{
+  max-height: 33%;
+  background-color:#7a3b2e;
+  padding: 15px 32px;
+  text-align: center;
+  
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+ }
+ .submitAnswer{
+   max-width: 100%;
+ }
+ #questionsForm{
+   max-height: 75%;
+   width: 100%;
+   height: 75%;
+ }
+ #currentQuestion{
+   margin-top: 10%;
+   max-width: 100%;
+ }
+ #radios{
+   margin-top: 10%;
+   max-width: 100%;
+   margin-left: auto;
+   margin-right: auto;
+   text-align: left;
+ }
+ .answer{
+   margin: 10px;
+ }
+ .bottomBar{
+   max-width: 100%;
+   max-height: 25%;
+ }
+ .question,.score{
+   max-width: 100%;
+ }
+ #endPage{
+   max-width: 100%;
+ }
+}
